@@ -6,7 +6,6 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 public class McdalangToRuby extends OutputBaseListener {
-
     public McdalangToRuby() {
         output = new StringBuilder();
     }
@@ -17,12 +16,13 @@ public class McdalangToRuby extends OutputBaseListener {
         if (code == null || code.isBlank()) return "";
         return Arrays.stream(code.split("\n"))
                 .filter(line -> !line.isBlank())
-                .map(line -> "  " + line)
+                .map(line -> "    " + line)
                 .collect(Collectors.joining("\n"));
     }
 
     private String translateType(String type) {
-        return ""; // Ruby does not use types in declarations
+        // Ruby is dynamically typed, so we don't need type declarations
+        return "";
     }
 
     @Override
@@ -55,9 +55,11 @@ public class McdalangToRuby extends OutputBaseListener {
             String expr = values.get(ctx.expr());
             values.put(ctx, id + " = " + expr + "\n");
         } else {
-            values.put(ctx, id + " = nil\n");
+            // Don't initialize to nil unless explicitly needed
+            values.put(ctx, "");
         }
     }
+
 
     @Override
     public void exitAssignment(McdalangParser.AssignmentContext ctx) {
@@ -95,9 +97,9 @@ public class McdalangToRuby extends OutputBaseListener {
         String params = "";
 
         if (ctx.paramList() != null) {
+            params = "";
             var ids = ctx.paramList().ID();
-            List<String> paramNames = ids.stream().map(ParseTree::getText).toList();
-            params = String.join(", ", paramNames);
+            params = String.join(", ", ids.stream().map(id -> id.getText()).collect(Collectors.toList()));
         }
 
         String body = values.get(ctx.block());
@@ -110,26 +112,29 @@ public class McdalangToRuby extends OutputBaseListener {
         List<String> args = new ArrayList<>();
         for (var expr : ctx.expr()) args.add(values.get(expr));
         for (var caller : ctx.ID()) callers.add(caller.getText());
-        values.put(ctx, String.join("_", callers) + "(" + String.join(", ", args) + ")");
+        values.put(ctx, String.join(".", callers) + "(" + String.join(", ", args) + ")");
     }
 
     @Override
     public void exitIfStmt(McdalangParser.IfStmtContext ctx) {
         StringBuilder sb = new StringBuilder();
-        sb.append("if ").append(values.get(ctx.expr(0))).append("\n")
-                .append(indent(values.get(ctx.block(0))));
-
         if (ctx.getText().contains("snsi")) {
-            sb.append("\nelsif ").append(values.get(ctx.expr(1))).append("\n")
-                    .append(indent(values.get(ctx.block(1))));
+            sb.append("if ").append(values.get(ctx.expr(0))).append("\n")
+                    .append(indent(values.get(ctx.block(0)))).append("\nelsif ")
+                    .append(values.get(ctx.expr(1))).append("\n")
+                    .append(indent(values.get(ctx.block(1)))).append("\n");
             if (ctx.block().size() == 3) {
-                sb.append("\nelse\n").append(indent(values.get(ctx.block(2))));
+                sb.append("else\n").append(indent(values.get(ctx.block(2)))).append("\n");
             }
-        } else if (ctx.block().size() == 2) {
-            sb.append("\nelse\n").append(indent(values.get(ctx.block(1))));
+            sb.append("end\n");
+        } else {
+            sb.append("if ").append(values.get(ctx.expr(0))).append("\n")
+                    .append(indent(values.get(ctx.block(0)))).append("\n");
+            if (ctx.block().size() == 2) {
+                sb.append("else\n").append(indent(values.get(ctx.block(1)))).append("\n");
+            }
+            sb.append("end\n");
         }
-
-        sb.append("\nend\n");
         values.put(ctx, sb.toString());
     }
 
@@ -137,22 +142,59 @@ public class McdalangToRuby extends OutputBaseListener {
     public void exitLoopStmt(McdalangParser.LoopStmtContext ctx) {
         String result;
         if (ctx.getStart().getText().equals("tantque")) {
+            // While loop
             String cond = values.get(ctx.expr());
             String body = values.get(ctx.block());
             result = "while " + cond + "\n" + indent(body) + "\nend\n";
         } else if (ctx.getStart().getText().equals("faire")) {
+            // Do-while loop
             String body = values.get(ctx.block());
             String cond = values.get(ctx.expr());
             result = "begin\n" + indent(body) + "\nend while " + cond + "\n";
         } else {
-            String init = values.get(ctx.assignment(0));
-            String cond = values.get(ctx.expr());
-            String update = values.get(ctx.assignment(1));
+            // For loop
+            String init = ctx.assignment().size() > 0 ? values.get(ctx.assignment(0)).replace("\n", "").trim() : "";
+            String cond = ctx.expr() != null ? values.get(ctx.expr()).replace("\n", "").trim() : "";
+            String update = ctx.assignment().size() > 1 ? values.get(ctx.assignment(1)).replace("\n", "").trim() : "";
             String body = values.get(ctx.block());
-            result = init + indent("while " + cond + "\n" + indent(body + update) + "\nend\n");
+
+            // Extract loop components safely
+            try {
+                String var = init.split("=")[0].trim();
+                String start = init.split("=")[1].trim();
+
+                // Handle both numeric and variable end bounds
+                String end = "";
+                if (cond.contains("<=")) {
+                    end = cond.split("<=")[1].trim();
+                } else if (cond.contains("<")) {
+                    end = cond.split("<")[1].trim();
+                }
+
+
+                String rangeOp = cond.contains("<=") ? ".." : "...";
+
+                if (!end.isEmpty()) {
+                    result = "for " + var + " in " + start + rangeOp + end + "\n" +
+                            indent(body) + "\nend\n";
+                } else {
+
+                    result = init + "\nwhile " + cond + "\n" +
+                            indent(body) + "\n" +
+                            indent(update) + "\nend\n";
+                }
+            } catch (Exception e) {
+
+                result = (!init.isEmpty() ? init + "\n" : "") +
+                        "while " + cond + "\n" +
+                        indent(body) + "\n" +
+                        (!update.isEmpty() ? indent(update) + "\n" : "") +
+                        "end\n";
+            }
         }
         values.put(ctx, result);
     }
+
 
     @Override
     public void exitBlock(McdalangParser.BlockContext ctx) {
@@ -164,16 +206,20 @@ public class McdalangToRuby extends OutputBaseListener {
         values.put(ctx, sb.toString());
     }
 
-    // Expressions follow Ruby syntax (very close to C), so these are mostly direct
-
     @Override
     public void exitConcatenationExpr(McdalangParser.ConcatenationExprContext ctx) {
         if (ctx.equalityExpr().size() == 1) {
             values.put(ctx, values.get(ctx.equalityExpr(0)));
         } else {
-            StringBuilder sb = new StringBuilder(values.get(ctx.equalityExpr(0)));
-            for (int i = 1; i < ctx.equalityExpr().size(); i++) {
-                sb.append(" + ").append(values.get(ctx.equalityExpr(i)));
+            StringBuilder sb = new StringBuilder();
+            for (int i = 0; i < ctx.equalityExpr().size(); i++) {
+                String expr = values.get(ctx.equalityExpr(i));
+
+                if (expr.matches("^\\d+$")) {
+                    expr = expr + ".to_s";
+                }
+                if (i > 0) sb.append(" + ");
+                sb.append(expr);
             }
             values.put(ctx, sb.toString());
         }
@@ -243,6 +289,7 @@ public class McdalangToRuby extends OutputBaseListener {
         if (ctx.getChildCount() == 1) {
             values.put(ctx, values.get(ctx.orExpr()));
         } else if (ctx.getChildCount() == 5 && ctx.getChild(1).getText().equals("?")) {
+            // Ternary expression: condition ? then : else
             String cond = values.get(ctx.orExpr());
             String thenExpr = values.get(ctx.expr(0));
             String elseExpr = values.get(ctx.expr(1));
@@ -257,7 +304,9 @@ public class McdalangToRuby extends OutputBaseListener {
         } else {
             StringBuilder sb = new StringBuilder(values.get(ctx.andExpr(0)));
             for (int i = 1; i < ctx.andExpr().size(); i++) {
-                sb.append(" || ").append(values.get(ctx.andExpr(i)));
+                String op = ctx.getChild(2 * i - 1).getText(); // Get '||' or 'OR'
+                if (op.equals("OR")) op = "||";
+                sb.append(" ").append(op).append(" ").append(values.get(ctx.andExpr(i)));
             }
             values.put(ctx, sb.toString());
         }
@@ -270,7 +319,9 @@ public class McdalangToRuby extends OutputBaseListener {
         } else {
             StringBuilder sb = new StringBuilder(values.get(ctx.notExpr(0)));
             for (int i = 1; i < ctx.notExpr().size(); i++) {
-                sb.append(" && ").append(values.get(ctx.notExpr(i)));
+                String op = ctx.getChild(2 * i - 1).getText(); // Get '&&' or 'AND'
+                if (op.equals("AND")) op = "&&";
+                sb.append(" ").append(op).append(" ").append(values.get(ctx.notExpr(i)));
             }
             values.put(ctx, sb.toString());
         }
@@ -279,10 +330,13 @@ public class McdalangToRuby extends OutputBaseListener {
     @Override
     public void exitNotExpr(McdalangParser.NotExprContext ctx) {
         if (ctx.getChildCount() == 2) {
-            values.put(ctx, "!" + values.get(ctx.notExpr()));
-        } else {
-            values.put(ctx, values.get(ctx.concatenationExpr()));
+            String op = ctx.getChild(0).getText();
+            if (op.equals("!") || op.equalsIgnoreCase("NOT")) {
+                values.put(ctx, "!" + values.get(ctx.notExpr()));
+                return;
+            }
         }
+        values.put(ctx, values.get(ctx.concatenationExpr()));
     }
 
     @Override
@@ -290,7 +344,7 @@ public class McdalangToRuby extends OutputBaseListener {
         if (ctx.INT() != null) values.put(ctx, ctx.INT().getText());
         else if (ctx.FLOAT() != null) values.put(ctx, ctx.FLOAT().getText());
         else if (ctx.STRING() != null) values.put(ctx, ctx.STRING().getText());
-        else if (ctx.CHAR() != null) values.put(ctx, "'" + ctx.CHAR().getText() + "'");
+        else if (ctx.CHAR() != null) values.put(ctx, ctx.CHAR().getText());
         else if (ctx.ID() != null) values.put(ctx, ctx.ID().getText());
         else if (ctx.funcCall() != null) values.put(ctx, values.get(ctx.funcCall()));
         else if (ctx.expr() != null) values.put(ctx, "(" + values.get(ctx.expr()) + ")");
